# Golf.github.io

./: .nojekyll  README.md  _quarto.yml  about.html  index.html  index.qmd  pyproject.toml  requirements.txt  robots.txt  sitemap.xml
_site/: index.html  search.json
