[project]
name = "golf-github-io"
version = "0.1.0"
description = ""
authors = [
    {name = "Nutchanon Chaiyaratana",email = "257311771+Nutchanon-Gee@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "golf"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
